--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@saurabh-chauhan/sc-components-library": "^2.2.0",
     "@tanstack/react-query": "^5.32.1",
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.76.0"
